--- a/src/Components/Lembretes/calendarStyle.css
+++ b/src/Components/Lembretes/calendarStyle.css
@@ -1,6 +1,6 @@
 .calendar {
     font-family: Arial, sans-serif;
-    max-width: 600px;
+    width: 80%;
     margin: 0 auto;
     background-color: #f5f5f5;
     padding: 20px;
